# codewalker

./: README.md  pyproject.toml
codewalker/: code.py  edge_kinds.py  exception_base.py  node_kinds.py
tests/: code_graph_self_test.py
